<resources>
    <string name="app_name">AndiQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_msg">Welcome to AndiQuiz!</string>
    <string name="start_quiz_msg">Welcome \n to \n Andi Quiz! \n\n Start Now!</string>
    <string name="start_about_msg">About</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings Start Up -->
    <string name="start_up_updating_token_message">Revoking Your Access!</string>
    <string name="start_up_patient_message">Please be Patient :)</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_log_in_short">Log In</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="suggest_register">Dont have an account?</string>
    <string name="action_register">Register Here</string>
    <string name="login_message">Welcome to AndiQuiz!</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>


    <!-- Data Strings -->
    <string name="error_wrong_input">Oops. No such data, please try again!</string>
    <string name="error_app_crash">Oops. Something bad happened, please try again!</string>

    <!-- Registration Strings -->
    <string name="register_message">Quick! Fill this Registration form!</string>
    <string name="action_register_new_user">Register</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="error_passwords_dont_match">Passwords don\'t match!</string>
    <string name="error_invalid_name">Invalid Name, Atleast 3 characters!</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="success_user_register">User registered successfully!</string>
    <string name="action_log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_category">Choose By Category</string>
    <string name="play_quiz">Play Quiz!</string>
    <string name="show_recent_quizzes">Show Recent Quizzes</string>
    <string name="my_profile">My Profile</string>
    <string name="search">Search</string>
    <string name="list_item_category_name">Category Name:</string>
    <string name="list_item_category_quizzes">Quizzes in Category:</string>
    <string name="categories" >Categories:</string>
    <string name="updateImage">Update Your Image</string>
    <string name="doQuiz">Do Quiz</string>
    <string name="findQuiz">Find Quiz</string>
</resources>
